doc: fix font on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 2rem;
     background-color: #fff;
     border-radius: 2rem;
-    font-size: 16pt;
+    font-size: 1.6rem;
     color: var(--color-text);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: min(60rem, 95vw);
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 code {
-    font-size: 12pt;
+    font-size: 1rem;
     background-color: var(--color-gray);
     border-radius: 2px;
     padding-left: 0.2rem;
@@ -46,14 +46,15 @@ pre > code {
     background-color: rgba(0,0,0,0);
     padding: 0;
     border-radius: 0;
+    font-size: 1.3rem;
 }
 pre {
-    font-size: 12pt;
-    background-color: var(--color-pale);
+    background-color: var(--color-gray);
     border-radius: 1rem;
     margin: 1rem;
-    padding: 1rem;
+    padding: 1.5rem;
     overflow: auto;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 table{
@@ -81,7 +82,7 @@ tr:nth-child(even) {background: var(--color-pale)}
 key {
     position: relative;
     top: -2pt;
-    font-size: 10pt;
+    font-size: 0.9rem;
     border: 1px solid black;
     background-color: var(--color-pale);
     border-radius: 3px;
